Fix tags in existing Swagger docs
